# rel_oss_interfaces

./: CMakeLists.txt  README.md  package.xml
action/: BTGenerative.action  BTInterface.action  BTPrimitive.action  ExecuteExp.action  ExecuteTraj.action
msg/: BTNodeStatus.msg  Instruction.msg  ObjectState.msg
srv/: ActionTraj.srv  AddObject.srv  ArucoPoses.srv  GripperLog.srv  JointReq.srv  JointSat.srv  LoadExp.srv  MoveSim.srv  PlayPath.srv  PoseReq.srv  PrimitiveExec.srv  ReadBlack.srv  RotateEffector.srv  SendCsv.srv  SetPath.srv  StatusLog.srv  TrajLog.srv  TrajSec.srv  TrajSend.srv
